# qa-dashboard-version-light-by-kimi

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  ANALYSE_ET_PLAN_2026.md  CLAUDE.md  DOCKER_CHEATSHEET.md  Makefile  PLAN_AMELIORATIONS.md  QUICK_START.md  RAPPORT_ANALYSE_QA_DASHBOARD.md  README.md  ROADMAP.md  ROADMAP_DOCKER.md  ROADMAP_EXECUTION.md  TECH_DEBT_AUDIT.md  ULTRAREVIEW.md  docker-compose.dev.yml  docker-compose.yml  metrics.json  package.json  playwright.config.js
backend_py/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.python.yml  pyproject.toml
backend_py/alembic/: env.py
backend_py/alembic/versions/: 8a0998e7f55f_add_gitlab_connector_and_trpc_bridge_.py  c64826df80ff_add_sync_case_runs_and_auto_sync_config.py  cf4371bc740e_init.py
backend_py/app/: config.py  constants.py  database.py  deps.py  main.py  projects_config.py  schemas.py  schemas_trpc.py
backend_py/app/core/: circuit_breaker.py  resilience.py  security.py
backend_py/app/jobs/: analytics.py  auto_sync.py  backup.py  feedback_sync.py  metrics_snapshot.py  retention.py  scheduler.py
backend_py/app/models/: __init__.py  analytics.py  audit.py  base.py  comments.py  integrations.py  (+7 more)
backend_py/tests/: conftest.py  test_auth.py  test_case_sync.py  test_health.py  test_metrics_snapshot_job.py  test_models.py  test_phase3.py  test_phase4.py  test_routers_integration.py  test_services.py  test_smart_alerts.py  test_status_sync.py  test_steps_extraction.py  test_sync_mapper.py  test_testmo_browser.py  test_testmo_cases.py
(+600 files in other folders)
